--- a/examples/data/single_knowledge_base.json
+++ b/examples/data/single_knowledge_base.json
@@ -1,7 +1,7 @@
 {
     "start": {
         "__user_id": "0x76ee9597e931e09443caf20374dc0fe3d29e2020",
-        "__text": "以太坊状态转换"
+        "__text": "eth status conversion"
     },
     "node": {
         "type": "knowledge_base",
